deploy/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: australiajobseeker
spec:
  type: LoadBalancer
  selector:
    app: australiajobseeker-app
  ports:
  - name: a2a
    port: 9999
    targetPort: 9999
    protocol: TCP
  - name: api
    port: 8000
    targetPort: 8000
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: app-internal
  namespace: australiajobseeker
spec:
  type: ClusterIP
  selector:
    app: australiajobseeker-app
  ports:
  - name: a2a
    port: 9999
    targetPort: 9999
  - name: api
    port: 8000
    targetPort: 8000
